fix font color on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
 #dark span {
   color: #F8F6F2;
 }
+#dark h3 {
+  color: #F8F6F2;
+}
+#dark a{
+  color: #F8F6F2;
+}
 
 main {
   max-width: 1200px;
